# simodels

./: .gitlab-ci.yml  Cargo.toml  README.md
.gitea/workflows/: tag_release.yaml  workflow.yaml
src/: album.rs  coverart.rs  song.rs  token.rs
tests/: tests.rs
