[package]
name = "icarus_models"
version = "0.11.1"
edition = "2024"
rust-version = "1.95"
description = "models used for the icarus project"
license = "MIT"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
rand = { version = "0.10.1" }
time = { version = "0.3.47", features = ["formatting", "macros", "parsing", "serde"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
josekit = { version = "0.10.3" }
utoipa = { version = "5.4.0", features = ["uuid", "time"] }

[dev-dependencies]
tempfile = { version = "3.27.0" }
