[package]
name = "icarus_models"
version = "0.11.2"
edition = "2024"
rust-version = "1.95"
description = "models used for the icarus project"
license = "MIT"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150" }
rand = { version = "0.10.2" }
time = { version = "0.3.53", features = ["formatting", "macros", "parsing", "serde"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
josekit = { version = "0.10.3" }
utoipa = { version = "5.5.0", features = ["uuid", "time"] }

[dev-dependencies]
tempfile = { version = "3.27.0" }
